# source-notes-ingestor

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: architecture.md  plan.md  technical.md  technical.zh-CN.md
plugins/notes-rg-qa/.codex-plugin/: plugin.json
plugins/obsidian-qa/.codex-plugin/: plugin.json
samples/: README.md  wechat_target.example.json  zhihu_target.example.json
scopes/: README.md  linlin.json
scripts/: README.md  status.sh  watch_wechat_progress.sh
src/adapters/wechat/: README.md
src/adapters/zhihu/: README.md
src/normalizer/: README.md
src/obsidian_knowledge_ingestor/: __init__.py  browser_automation.py  cli.py  config.py  html_tools.py  models.py  pipeline.py  qa_builder.py  qa_runner.py  scope_loader.py  vault_writer.py  verification.py  wechat_discovery.py
src/obsidian_knowledge_ingestor/adapters/: __init__.py  feed.py  wechat.py  zhihu.py
src/qa_runner/: README.md
src/source_notes_ingestor/: __init__.py  browser_automation.py  cli.py  config.py  library_writer.py  normalizer.py  pipeline.py  utils.py  verification.py  wechat_discovery.py
src/source_notes_ingestor/adapters/: feed.py  wechat.py  zhihu.py
src/vault_writer/: README.md
state/: README.md
targets/: wechat_damowang.json  wechat_damowang_discovered.json  zhihu_linlin.json
tests/: README.md  test_browser_automation.py  test_cli.py  test_cli_qa.py  test_library_writer.py  test_normalizer.py  test_pipeline.py  test_qa_builder.py  test_qa_runner.py  test_vault_writer.py  test_verification.py  test_wechat_adapter.py  test_wechat_browser_priority.py  test_wechat_content_id.py  test_wechat_discovery.py  test_zhihu_adapter_browser.py  test_zhihu_author_filter.py
(+2 files in other folders)
