[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-knowledge-ingestor"
version = "0.1.0"
description = "Local-first ingestion pipeline from Zhihu and WeChat into Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "haoyueb2"}
]
keywords = ["obsidian", "zhihu", "wechat", "rss", "knowledge-base"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
oki = "obsidian_knowledge_ingestor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
