[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "source-notes-ingestor"
version = "0.1.0"
description = "Local-first ingestion pipeline from Zhihu and WeChat into a Markdown notes library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "beautifulsoup4>=4.12",
]
authors = [
  {name = "haoyueb2"}
]
keywords = ["notes", "zhihu", "wechat", "rss", "knowledge-base"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
sni = "source_notes_ingestor.cli:main"

[project.optional-dependencies]
browser = [
  "playwright>=1.51",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
